Wrote paragraph for CSS block & fixed parallax misalignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -338,12 +338,12 @@ a:active {
   @include prefix(box-shadow, -7px 11px 28px 14px rgba(0,0,0,0.75), webkit moz ms o);
 }
 
-$i: 2;
+$i: 1;
 
 @while $i < 8 {
 
  ##{padding- + $i} {
-    margin-top: ($i * 1100) + px;
+    margin-top: ($i * 1400) + px;
   }
 
   $i: $i + 1;
@@ -353,7 +353,7 @@ $i: 2;
   height: 1000px;
   width: 100%;
   z-index: -5;
-  margin-top: -950px;
+  margin-top: -750px;
   position: absolute;
   background-image: url($code-background);
   @include prefix(filter, blur(2px), webkit moz ms o);
@@ -364,7 +364,7 @@ $i: 1;
 @while $i < 8 {
 
   ##{container-background- + $i} {
-    margin-top: -1000 + ($i * 1000) + px;
+    margin-top: -850 + ($i * 980) + px;
   }
   $i: $i + 1;
 }
@@ -1153,11 +1153,6 @@ $dayMap: (
   top: 25%;
   position: relative;
   font-size: 28px;
-  text-align: center;
-}
-
-.projects-block-title {
-  @include border(1px solid, $gold-color, bottom);
   text-align: center;
 }
 
